first change in new season

--- a/views/contacto.ejs
+++ b/views/contacto.ejs
@@ -1,4 +1,4 @@
-<%- include("template/cabecera", {tituloweb: 'contacto'}) %>
+<%- include("template/cabecera", {tituloweb: 'contactoe'}) %>
 
     <%= tcontacto %> 
 
