--- a/views/template/navbar.ejs
+++ b/views/template/navbar.ejs
@@ -9,12 +9,12 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
-          <li class="nav-item">
+         <!--  <li class="nav-item">
             <a class="nav-link" href="/servicios">Servicios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contacto">Contacto</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="/404">404</a>
           </li>
