first change in new season

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,17 @@
 <%- include("template/cabecera",{tituloweb: 'HOME'}) %> 
 
-<h1 class="text-primary">static title</h1>
-<h2><%= titulo  %> </h2>
+<h1 class="text-primary"></h1>
+<center><h2><%= titulo  %> </h2></center>
 
 <!-- tarjetas importadas -->
 <div class="support-grid"></div>
+
+
+<p><center> <h4> El texto argumentativo tiene como principal objetivo dar sustento a la tesis formulada por el autor <br>
+mediante la exposición coherente y lógica de justificaciones o razones, que tienen como propósito <br>
+persuadir o convencer al lector sobre un punto de vista predeterminado</h4></center></p>
+
+<br> <br><br><br>
 
   <div class="band">
     <div class="item-1">
