--- a/views/template/navbar.ejs
+++ b/views/template/navbar.ejs
@@ -14,17 +14,17 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contacto">Contacto</a>
-          </li> -->
+          </li> 
           <li class="nav-item">
             <a class="nav-link" href="/404">404</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link disabled" href="/contacto" tabindex="-1" aria-disabled="true">-</a>
           </li>
         </ul>
         <form class="d-flex">
-          <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> 
+          <button class="btn btn-outline-success" type="submit">Search</button>-->
         </form>
       </div>
     </div>
