--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -1,5 +1,22 @@
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="/js/bootstrap.min.js"></script>
+<footer class="w3-container w3-teal w3-padding-32 w3-margin-top">
 
-</body>
-</html>
+  <a style="display:scroll; position:fixed; bottom:10px; right:80px;" href="#menu" title="Volver arriba"><img src="./img/flecha.png" alt="Image" class="w3-left w3-margin-right" style="width:50px"></a>
+    <p class="w3-teal" style="text-align: left"><b>BIBLIOGRAFIA</b><br> 
+      
+      • Informe sobre malware en América Latina, Laboratorio ESET Latinoamérica, 2008. <BR>
+      <a class="w3-teal" href="http://www.eset-la.com/threat-center/1732-informe-malware-america-latina"><u> http://www.eset-la.com/threat-center/1732-informe-malware-america-latina</u></a><BR>
+      • Ten ways hackers breach security. Global Knowledge. 2008<BR>
+     <a class="w3-teal" href="http://images.globalknowledge.com"><u>http://images.globalknowledge.com</u></a> <BR>
+      • Bruce Schneier, Secrets & Lies. Digital Security in a Networked World. John Wiley & Sons, 2000.<BR>
+      • Kevin Mitnick, The Art of Intrusión. John Wiley & Sons, 2005.<BR>
+      • La Odisea de Homero.<BR>
+      • Official Certified Ethical Hacker, Sybex. 2007.<BR>
+      • Sun Tzu, El arte de la guerra. Versión de Samuel Griffith. Editorial Taschen Benedikt. 2006.</p>
+    </footer>
+    
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </body>
+    </html>
