--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -2,14 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/tarjetas.imp.css">
+    <title>Actividad 2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+    body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    </style>
+    </head>
+    <body class="w3-white">
 
-    <title>EJS - <%= tituloweb  %></title>
-
-</head>
-<body>
-
-    <%- include("navbar") %> 
+        <nav id="menu" class="navbar navbar-expand-lg navbar-dark bg-info ">
+            <a class="navbar-brand" href="#"><b>ACTIVIDAD 2</b></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/">RESUMEN <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="/caso1">CASO 1 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="/caso2">CASO 2 <span class="sr-only">(current)</span></a>
+                </li>
+              
+              </ul>
+            </div>
+          </nav>
+          
+          
+          <div class="w3-content" style="max-width:1400px">
+          
+          <!-- Header -->
+          <header class="w3-container w3-center   w3-padding-32"> 
+          <h1><b>ACTIVIDAD <span class="w3-tag">2</span></b></h1>
+          
+          </header>
+          
