--- a/views/caso2.ejs
+++ b/views/caso2.ejs
@@ -94,7 +94,7 @@
         <ul class="w3-ul w3-hoverable w3-white">
           <a href="#comu"><li class="w3-padding-16">
             <img src="./img/or.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Este es el comunicado de Orange</span><br>
+            <span class="w3-large">Comunicado de Orange</span><br>
             
           </li></a>
           
@@ -114,7 +114,7 @@
     
     <!-- Footer -->
     <footer class="w3-container w3-teal w3-padding-32 w3-margin-top">
-        <a style="display:scroll; position:fixed; bottom:10px; right:80px;" href="#menu" title="Volver arriba"><img src="./img/flecha.png" alt="Image" class="w3-left w3-margin-right" style="width:50px"></a>
+        <a style="display:scroll; position:fixed; bottom:10px; right:20px;" href="#menu" title="Volver arriba"><img src="./img/flecha.png" alt="Image" class="w3-left w3-margin-right" style="width:50px"></a>
  
         <h3>BILBLIOGRAFIA</h3>
       <p><a class="w3-teal" href="https://www.huffingtonpost.es/entry/orange-confirma-el-robo-de-informacion-personal-y-bancaria-de-clientes-tras-un-ataque-informatico_es_63692d1fe4b08f849aadd6e4"><U>https://www.huffingtonpost.es/entry/orange-confirma-el-robo-de-informacion-personal-y-bancaria-de-clientes-tras-un-ataque-informatico_es_63692d1fe4b08f849aadd6e4</U></a></p>
