--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Actividad 2</title>
+    <title>Seguridad informática</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -15,7 +15,7 @@
     <body class="w3-white">
 
         <nav id="menu" class="navbar navbar-expand-lg navbar-dark bg-info ">
-            <a class="navbar-brand" href="#"><b>ACTIVIDAD 2</b></a>
+            <a class="navbar-brand" href="#"><b>Seguridad informática</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
