--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -1,6 +1,8 @@
 <footer class="w3-container w3-teal w3-padding-32 w3-margin-top">
 
-  <a style="display:scroll; position:fixed; bottom:10px; right:80px;" href="#menu" title="Volver arriba"><img src="./img/flecha.png" alt="Image" class="w3-left w3-margin-right" style="width:50px"></a>
+  <a style="display:scroll; position:fixed; bottom:10px; right:20px;" href="#menu" title="Volver arriba">
+    <img src="./img/flecha.png" alt="Image" class="w3 w3-margin-right" style="width:50px">
+  </a>
     <p class="w3-teal" style="text-align: left"><b>BIBLIOGRAFIA</b><br> 
       
       • Informe sobre malware en América Latina, Laboratorio ESET Latinoamérica, 2008. <BR>
