three change in new season

--- a/views/template/cabecera.ejs
+++ b/views/template/cabecera.ejs
@@ -8,21 +8,25 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
+    <link rel="icon" href="/img/ico.png">
+ 
+   <style>
     body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    
+
     </style>
     </head>
     <body class="w3-white">
 
-        <nav id="menu" class="navbar navbar-expand-lg navbar-dark bg-info ">
-            <a class="navbar-brand" href="#"><b>Seguridad informática</b></a>
+        <nav id="menu" class="navbar navbar-expand-lg navbar-dark w3-blue">
+            <a class="navbar-brand" href="/"><b>Seguridad Informática</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">RESUMEN <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/resumen">RESUMEN <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/caso1">CASO 1 <span class="sr-only">(current)</span></a>
