--- a/views/first.ejs
+++ b/views/first.ejs
@@ -48,7 +48,7 @@
       <!-- About Card -->
       <div class="w3-card w3-margin w3-margin-top">
         <a href="/caso1">
-         <img src="./img/FTX.jpg" style="width:100%; height: 300px;">
+         <img src="./img/ftxb.jpg" style="width:100%; height: 300px;">
          <div class="w3-container w3-center">
           <p>CASO 1</p>
         </div></a>
