--- a/views/first.ejs
+++ b/views/first.ejs
@@ -48,7 +48,7 @@
       <!-- About Card -->
       <div class="w3-card w3-margin w3-margin-top">
         <a href="/caso1">
-         <img src="./img/ftxb.jpg" style="width:100%; height: 300px;">
+         <img src="./img/ftxlaz.jpg" style="width:100%; height: 300px;">
          <div class="w3-container w3-center">
           <p>CASO 1</p>
         </div></a>
@@ -60,7 +60,7 @@
         <!-- About Card -->
         <div class="w3-card w3-margin w3-margin-top">
           <a href="/caso2">
-          <img src="./img/logo-orange.png" style="width:100%; height: 300px;">
+          <img src="./img/orangelnw.png" style="width:100%; height: 300px;">
           <div class="w3-container w3-center">
             <p>CASO 2</p>
           </div></a>
@@ -78,7 +78,7 @@
     <footer class="w3-container w3-teal w3-padding-32 w3-margin-top">
         <a style="display:scroll; position:fixed; bottom:10px; right:20px;" href="#menu" title="Volver arriba"><img src="./img/flecha.png" alt="Image" class="w3-left w3-margin-right" style="width:50px"></a>
  
-      <p> Fecha del sitio publicad0: <span class="w3-opacity">21/11/2022</span></p>
+      <p> Fecha de última actualización: <span class="w3-opacity">21/11/2022</span></p>
     </footer>
     
     
