--- a/views/first.ejs
+++ b/views/first.ejs
@@ -78,7 +78,7 @@
     <footer class="w3-container w3-teal w3-padding-32 w3-margin-top">
         <a style="display:scroll; position:fixed; bottom:10px; right:20px;" href="#menu" title="Volver arriba"><img src="./img/flecha.png" alt="Image" class="w3-left w3-margin-right" style="width:50px"></a>
  
-      <p> Fecha de última actualización: <span class="w3-opacity">21/11/2022</span></p>
+      <p> Fecha de la última actualización de este sitio: <span class="w3-opacity">21/11/2022</span></p>
     </footer>
     
     
